# Wolfram

./: LICENSE  Makefile  README.md  package.yaml  stack.yaml  wolfram.cabal
TEST1/: Test
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Automaton.hs  Error.hs  Rule.hs
