cabal-version:       2.4
name:                wolfram
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        LICENSE
author:              Noé Jaïs
maintainer:          noejais@example.com
category:            Simulation
synopsis:            Terminal cellular automaton
description:         See the README for more information.

executable wolfram
  main-is:             Main.hs
  hs-source-dirs:      app, src
  other-modules:
    Error
    Automaton
  build-depends:       transformers >=0.5 && <0.6,
                       base >=4.7 && <5
  default-language:    Haskell2010
